[project]
name = "tempest"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0",
    "openai-agents>=0.1.0",
    "playwright>=1.53.0",
    "openai>=1.93.1",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
    "pytest>=8.4.1",
    "mypy>=1.17.0",
    "pyright>=1.1.403",
]

[tool.ruff]
line-length = 100




[tool.mypy]
plugins = ['pydantic.mypy']
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
